# spread

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  DiseaseBoard.py  README.md  UX.py  diseaseBoard.py  setup.cfg  setup.py  spread.py
src/: DiseaseBoard.py  spread.py
