[metadata]
name = stread
description = disease 
version = 0.3.0
author = Julien Bordet
platforms = linux, win32

[options]
packages = find:
package_dir =
    =src
install_requires =
    sip
    PyQt5
    pyqtgraph
python_requires = >= 3.7
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[flake8]
ignore = E203
exclude = .git
max-line-length=119
