[metadata]
name = stread
description = disease
version = 0.4.0
author = Julien Bordet
platforms = linux, win32

[options]
packages = find:
package_dir =
    =src
install_requires =
    sip
    PyQt5
    pyqtgraph
python_requires = >= 3.7
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    flake8
    pre-commit
    mypy
    PyQt5-stubs
    bumpversion

[flake8]
ignore = E203
max-line-length=119
exclude =
    .git
    __pycache__
    venv

[mypy]
ignore_missing_imports = True
files = src/*.py
